--- a/stable/ibm-sam/charts/ibm-sam-openldap/Chart.yaml
+++ b/stable/ibm-sam/charts/ibm-sam-openldap/Chart.yaml
@@ -9,12 +9,11 @@ icon: https://d1q6f0aelx0por.cloudfront.net/product-logos/32925feb-af2b-4b4c-827
 version: 1.2.0
 tillerVersion: ">=2.6.0"
 engine: gotpl
+AppVersion: 9.0.7.0
 
 keywords:
   - isam
   - amd64
-  - Commercial
-  - ICP
   - Security
 
 home: https://hub.docker.com/r/ibmcom/isam-openldap/
