Affinity-and-PVC-keep

--- a/stable/ibm-security-verify-access-v121/charts/verify-access-config/templates/dataVolume.yaml
+++ b/stable/ibm-security-verify-access-v121/charts/verify-access-config/templates/dataVolume.yaml
@@ -15,7 +15,8 @@ metadata:
   name: {{ template "config.pvc.name" . }}
   labels:
 {{ include "sch.metadata.labels.standard" (list . "") | indent 4 }}
-
+  annotations:
+    "helm.sh/resource-policy": keep
 spec:
   {{- if .Values.global.persistence.useDynamicProvisioning }}
   ## if present, use the storageClassName from the values.yaml, else use the
@@ -35,4 +36,3 @@ spec:
       storage: {{ .Values.dataVolume.size | quote }}
 
 {{- end }}
-
