--- a/stable/ibm-security-verify-access-v121/charts/verify-access-wrp/templates/deployment.yaml
+++ b/stable/ibm-security-verify-access-v121/charts/verify-access-wrp/templates/deployment.yaml
@@ -61,14 +61,16 @@ spec:
       affinity:
 {{- include "sch.affinity.nodeAffinity" (list $dot) | indent 8 }}
         podAntiAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-          - labelSelector:
-              matchExpressions:
-              - key: app
-                operator: In
-                values:
-                - {{ include "wrp.name" (list $dot $instance) }}
-            topologyKey: "kubernetes.io/hostname"
+          preferredDuringSchedulingIgnoredDuringExecution:
+          - weight: 100
+            podAffinityTerm:
+              labelSelector:
+                matchExpressions:
+                - key: app
+                  operator: In
+                  values:
+                  - {{ include "wrp.name" (list $dot $instance) }}
+              topologyKey: "kubernetes.io/hostname"
 
       imagePullSecrets:
         - name: {{ template "docker.credentials.secret" $dot }}
