--- a/stable/ibm-security-verify-access-v121/charts/verify-access-postgresql/templates/dataVolume.yaml
+++ b/stable/ibm-security-verify-access-v121/charts/verify-access-postgresql/templates/dataVolume.yaml
@@ -15,7 +15,8 @@ metadata:
   name: {{ template "postgresql.pvc.name" . }}
   labels:
 {{ include "sch.metadata.labels.standard" (list . "") | indent 4 }}
-
+  annotations:
+    "helm.sh/resource-policy": keep
 spec:
   {{- if .Values.global.persistence.useDynamicProvisioning }}
   ## if present, use the storageClassName from the values.yaml, else use the
@@ -37,4 +38,3 @@ spec:
 {{- end }}
 
 {{- end }}
-
