--- a/stable/ibm-security-verify-access-v121/charts/verify-access-runtime/templates/deployment.yaml
+++ b/stable/ibm-security-verify-access-v121/charts/verify-access-runtime/templates/deployment.yaml
@@ -54,14 +54,16 @@ spec:
       affinity:
 {{- include "sch.affinity.nodeAffinity" (list .) | indent 8 }}
         podAntiAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-          - labelSelector:
-              matchExpressions:
-              - key: app
-                operator: In
-                values:
-                - {{ template "runtime.name" . }}
-            topologyKey: "kubernetes.io/hostname"
+          preferredDuringSchedulingIgnoredDuringExecution:
+          - weight: 100
+            podAffinityTerm:
+              labelSelector:
+                matchExpressions:
+                - key: app
+                  operator: In
+                  values:
+                  - {{ template "runtime.name" . }}
+              topologyKey: "kubernetes.io/hostname"
 
       imagePullSecrets:
         - name: {{ template "docker.credentials.secret" . }}
