--- a/incubator/ibm-security-verify-access-v130/templates/adminSecret.yaml
+++ b/incubator/ibm-security-verify-access-v130/templates/adminSecret.yaml
@@ -14,7 +14,7 @@ metadata:
     "helm.sh/hook":               pre-install
     "helm.sh/hook-delete-policy": hook-succeeded,hook-failed
     "helm.sh/hook-weight":        "3"
-    
+
 spec:
   template:
     metadata:
@@ -39,7 +39,7 @@ spec:
 
       containers:
       - name: {{ $compName | quote }}
-        image: "{{ .Values.global.image.repository }}"
+        image: "{{ .Values.global.image.configrepository }}"
         imagePullPolicy: {{ default "IfNotPresent" .Values.global.image.pullPolicy | quote }}
 
         securityContext:
@@ -61,4 +61,3 @@ spec:
   backoffLimit: 5
 
 {{- end }}
-
