--- a/incubator/ibm-security-verify-access-v130/templates/deleteAdminSecret.yaml
+++ b/incubator/ibm-security-verify-access-v130/templates/deleteAdminSecret.yaml
@@ -41,9 +41,9 @@ spec:
       imagePullSecrets:
         - name: {{ template "docker.credentials.secret" . }}
 
-      containers: 
+      containers:
       - name: {{ $compName | quote }}
-        image: "{{ .Values.global.image.repository }}"
+        image: "{{ .Values.global.image.configrepository }}"
         imagePullPolicy: {{ default "IfNotPresent" .Values.global.image.pullPolicy | quote }}
 
         securityContext:
@@ -65,4 +65,3 @@ spec:
   backoffLimit: 5
 
 {{- end }}
-
