--- a/incubator/ibm-security-verify-access-v130/charts/verify-access-config/templates/svc.yaml
+++ b/incubator/ibm-security-verify-access-v130/charts/verify-access-config/templates/svc.yaml
@@ -9,7 +9,12 @@ apiVersion: v1
 kind: Service
 
 metadata:
+{{- if $.Values.global.configservicename }}
+  name: {{ $.Values.global.configservicename }}
+{{- else }}
   name: {{ include "sch.names.fullName" (list .) }}
+{{- end }}
+
   labels:
 {{ include "sch.metadata.labels.standard" (list . "") | indent 4 }}
 
