--- a/incubator/ibm-security-verify-access-v130/charts/verify-access-config/values.yaml
+++ b/incubator/ibm-security-verify-access-v130/charts/verify-access-config/values.yaml
@@ -9,7 +9,7 @@
 global:
   # Common image variables
   image:
-    repository: ibmcom/verify-access:10.0.0.0
+    repository: ibmcom/verify-access:10.0.2.0
     pullPolicy: IfNotPresent
 
   # Image credentials.
@@ -48,5 +48,6 @@ resources:
 # Service Configuration.
 
 service:
+  servicename:
   type: NodePort
   nodePort:
