--- a/incubator/ibm-security-verify-access-v130/charts/verify-access-dsc/templates/deployment.yaml
+++ b/incubator/ibm-security-verify-access-v130/charts/verify-access-dsc/templates/deployment.yaml
@@ -47,9 +47,6 @@ spec:
       hostNetwork:    false
       hostPID:        false
       hostIPC:        false
-      securityContext:
-        runAsNonRoot: true
-        runAsUser:    6000
 
       affinity:
 {{- include "sch.affinity.nodeAffinity" (list $dot) | indent 8 }}
@@ -70,48 +67,19 @@ spec:
 
       containers:
       - name:  {{ include "dsc.name" (list $dot $element) }}
-
-        securityContext:
-          privileged:               false
-          readOnlyRootFilesystem:   false
-          allowPrivilegeEscalation: true
-          runAsNonRoot:             true
-          runAsUser:                6000
-          capabilities:
-            drop:
-            - ALL
-            add:
-            - CHOWN
-            - DAC_OVERRIDE
-            - FOWNER
-            - KILL
-            - NET_BIND_SERVICE
-            - SETFCAP
-            - SETGID
-            - SETUID
-
-        image: "{{ $.Values.global.image.repository }}"
+        image: "{{ $.Values.global.image.dscrepository }}"
         imagePullPolicy: {{ default "IfNotPresent" $.Values.global.image.pullPolicy | quote }}
         env:
         - name: SNAPSHOT
           value: {{ default "" $.Values.global.container.snapshot | quote }}
         - name: FIXPACKS
           value: {{ default "" $.Values.global.container.fixpacks | quote }}
-        - name: SERVICE
-          value: dsc
         - name: INSTANCE
           {{- if (eq $element "primary") }}
           value: "1"
           {{- else }}
           value: "2"
           {{- end }}
-        - name: ADMIN_PWD
-          valueFrom:
-            secretKeyRef:
-              name: {{ template "admin.secret" $dot }}
-              key: {{ template "admin.secret.key" $dot }}
-        - name: AUTO_RELOAD_FREQUENCY
-          value: {{ default "" $.Values.global.container.autoReloadInterval | quote }}
         - name: CONTAINER_TIMEZONE
           value: {{ default "" $.Values.global.container.timezone | quote }}
         - name: CONFIG_SERVICE_URL
@@ -146,8 +114,6 @@ spec:
         ports:
         - name: {{ include "dsc.service.name" (list $dot $element) }}
           containerPort: {{ template "runtime.port" $dot }}
-        - name: {{ include "dsc.admin.service.name" (list $dot $element) }}
-          containerPort: {{ template "admin.port" $dot }}
         - name: {{ include "dsc.replica.service.name" (list $dot $element) }}
           containerPort: {{ template "replica.port" $dot }}
 
