--- a/incubator/ibm-security-verify-access-v130/charts/verify-access-openldap/templates/svc.yaml
+++ b/incubator/ibm-security-verify-access-v130/charts/verify-access-openldap/templates/svc.yaml
@@ -11,7 +11,12 @@ apiVersion: v1
 kind: Service
 
 metadata:
+{{- if $.Values.service.servicename }}
+  name: {{ $.Values.service.servicename }}
+{{- else }}
   name: {{ template "openldap.name" . }}
+{{- end }}
+
   labels:
 {{ include "sch.metadata.labels.standard" (list . "") | indent 4 }}
 
@@ -26,4 +31,3 @@ spec:
     app: {{ template "openldap.name" . }}
 
 {{- end }}
-
