--- a/incubator/ibm-security-verify-access-v130/charts/verify-access-runtime/templates/deployment.yaml
+++ b/incubator/ibm-security-verify-access-v130/charts/verify-access-runtime/templates/deployment.yaml
@@ -43,14 +43,9 @@ spec:
 {{- include "sch.metadata.annotations.metering" (list . .sch.chart.metering) | indent 8 }}
 
     spec:
-
       hostNetwork:    false
       hostPID:        false
       hostIPC:        false
-      securityContext:
-        runAsNonRoot: true
-        runAsUser:    6000
-
       affinity:
 {{- include "sch.affinity.nodeAffinity" (list .) | indent 8 }}
         podAntiAffinity:
@@ -70,42 +65,13 @@ spec:
 
       containers:
       - name:  {{ template "runtime.name" . }}
-
-        securityContext:
-          privileged:               false
-          readOnlyRootFilesystem:   false
-          allowPrivilegeEscalation: true
-          runAsNonRoot:             true
-          runAsUser:                6000
-          capabilities:
-            drop:
-            - ALL
-            add:
-            - CHOWN
-            - DAC_OVERRIDE
-            - FOWNER
-            - KILL
-            - NET_BIND_SERVICE
-            - SETFCAP
-            - SETGID
-            - SETUID
-
-        image: "{{ .Values.global.image.repository }}"
+        image: "{{ .Values.global.image.runtimerepository }}"
         imagePullPolicy: {{ default "IfNotPresent" .Values.global.image.pullPolicy | quote }}
         env:
         - name: SNAPSHOT
           value: {{ default "" .Values.global.container.snapshot | quote }}
         - name: FIXPACKS
           value: {{ default "" .Values.global.container.fixpacks | quote }}
-        - name: SERVICE
-          value: runtime
-        - name: ADMIN_PWD
-          valueFrom:
-            secretKeyRef:
-              name: {{ template "admin.secret" . }}
-              key: {{ template "admin.secret.key" . }}
-        - name: AUTO_RELOAD_FREQUENCY
-          value: {{ default "" .Values.global.container.autoReloadInterval | quote }}
         - name: CONTAINER_TIMEZONE
           value: {{ default "" $.Values.global.container.timezone | quote }}
         - name: CONFIG_SERVICE_URL
@@ -123,8 +89,18 @@ spec:
             command:
             - /sbin/health_check.sh
             - livenessProbe
-          initialDelaySeconds: 10
+          failureThreshold: 6
           periodSeconds: 10
+          timeoutSeconds: 2
+
+        startupProbe:
+          exec:
+            command:
+            - /sbin/health_check.sh
+            - startupProbe
+          failureThreshold: 30
+          periodSeconds: 10
+          timeoutSeconds: 2
 
         readinessProbe:
           exec:
@@ -134,14 +110,13 @@ spec:
             {{- else }}
             - /usr/bin/true
             {{- end }}
-          initialDelaySeconds: 10
+          failureThreshold: 2
           periodSeconds: 10
+          timeoutSeconds: 2
 
         ports:
         - name: {{ .sch.chart.config.servicename }}
           containerPort: {{ template "runtime.port" . }}
-        - name: {{ .sch.chart.config.adminservicename }}
-          containerPort: {{ template "admin.port" . }}
 
         resources:
 {{ toYaml .Values.resources | indent 10 }}
