--- a/incubator/ibm-security-verify-access-v130/charts/verify-access-wrp/values.yaml
+++ b/incubator/ibm-security-verify-access-v130/charts/verify-access-wrp/values.yaml
@@ -9,7 +9,7 @@
 global:
   # Common image variables
   image:
-    repository: ibmcom/verify-access:10.0.0.0
+    repository: ibmcom/verify-access-wrp:10.0.2.0
     pullPolicy: IfNotPresent
 
   # Image credentials.
@@ -20,7 +20,6 @@ global:
   container:
     snapshot:            ""
     fixpacks:            ""
-    autoReloadInterval:
     timezone:           "Etc/UTC"
 
   # Persistence Storage
