--- a/incubator/ibm-security-verify-access-v130/charts/verify-access-config/templates/deployment.yaml
+++ b/incubator/ibm-security-verify-access-v130/charts/verify-access-config/templates/deployment.yaml
@@ -102,6 +102,7 @@ spec:
         - name: CONTAINER_TIMEZONE
           value: {{ default "" $.Values.global.container.timezone | quote }}
 
+{{- if not $.Values.global.container.readinessProbeDisabled }}
         readinessProbe:
           httpGet:
             scheme: HTTPS
@@ -110,7 +111,7 @@ spec:
           failureThreshold: 2
           timeoutSeconds: 2
           periodSeconds: 10
-
+{{- end }}
         livenessProbe:
           tcpSocket:
             port: {{ template "admin.port" . }}
