--- a/incubator/ibm-security-verify-access-v130/charts/verify-access-dsc/templates/deployment.yaml
+++ b/incubator/ibm-security-verify-access-v130/charts/verify-access-dsc/templates/deployment.yaml
@@ -99,6 +99,7 @@ spec:
             - livenessProbe
           initialDelaySeconds: 10
           periodSeconds: 10
+          timeoutSeconds: 2
 
         readinessProbe:
           exec:
@@ -110,6 +111,7 @@ spec:
             {{- end }}
           initialDelaySeconds: 10
           periodSeconds: 10
+          timeoutSeconds: 2
 
         ports:
         - name: {{ include "dsc.service.name" (list $dot $element) }}
