--- a/incubator/ibm-security-verify-access-v130/charts/verify-access-wrp/templates/deployment.yaml
+++ b/incubator/ibm-security-verify-access-v130/charts/verify-access-wrp/templates/deployment.yaml
@@ -100,6 +100,7 @@ spec:
             - livenessProbe
           initialDelaySeconds: 10
           periodSeconds: 10
+          timeoutSeconds: 2
 
         readinessProbe:
           exec:
@@ -111,6 +112,7 @@ spec:
             {{- end }}
           initialDelaySeconds: 10
           periodSeconds: 10
+          timeoutSeconds: 2
 
         ports:
         - name: {{ include "wrp.service.name" (list $dot $index) }}
