--- a/incubator/ibm-security-verify-access-v130/charts/verify-access-runtime/templates/deployment.yaml
+++ b/incubator/ibm-security-verify-access-v130/charts/verify-access-runtime/templates/deployment.yaml
@@ -84,34 +84,31 @@ spec:
               name: {{ template "admin.secret" . }}
               key: {{ template "admin.secret.key" . }}
 
-        livenessProbe:
-          exec:
-            command:
-            - /sbin/health_check.sh
-            - livenessProbe
-          failureThreshold: 6
-          periodSeconds: 10
-          timeoutSeconds: 2
-
-        startupProbe:
-          exec:
-            command:
-            - /sbin/health_check.sh
-          failureThreshold: 30
-          periodSeconds: 10
-          timeoutSeconds: 2
-
-        readinessProbe:
-          exec:
-            command:
-            {{- if not .Values.global.container.readinessProbeDisabled }}
-            - /sbin/health_check.sh
-            {{- else }}
-            - /usr/bin/true
-            {{- end }}
-          failureThreshold: 2
-          periodSeconds: 10
-          timeoutSeconds: 2
+          livenessProbe:
+            exec:
+              command:
+              - /sbin/health_check.sh
+              - livenessProbe
+            periodSeconds: 10
+            timeoutSeconds: 2
+            failureThreshold: 6
+{{- if not .Values.global.container.readinessProbeDisabled }}
+          readinessProbe:
+            httpGet:
+              scheme: HTTPS
+              port: {{ template "runtime.port" . }}
+              path: /sps/static/ibm-logo.png
+            periodSeconds: 10
+            failureThreshold: 2
+            timeoutSeconds: 2
+{{- end }}
+          startupProbe:
+            exec:
+              command:
+              - /sbin/health_check.sh
+            failureThreshold: 30
+            periodSeconds: 10
+            timeoutSeconds: 2
 
         ports:
         - name: {{ .sch.chart.config.servicename }}
